@@ -1,3 +1,8 @@
+2000-01-19  Alexander V. Lukyanov  <lav@yars.free.net>
+
+	* FtpListInfo.cc: check file names for slashes.
+	* FileCopy.cc: make percent using ranges.
+
 2000-01-17  Alexander V. Lukyanov  <lav@yars.free.net>
 
 	* commands.cc: don't use netrc if protocol is specified.
